...
                    ) {
                        if (!showCalendar) {
                            GetInput(
                                onSubmit = { enteredMonth, enteredYear ->
                                    month = enteredMonth
                                    year = enteredYear
                                    showCalendar = true
                                }
                            )
                        } else {
                            DrawCalendar(
                                month = month.toInt(),
                                year = year.toInt()
...
                horizontalAlignment = Alignment.CenterHorizontally,
                verticalArrangement = Arrangement.Center
            ) {
                // Month input field
                OutlinedTextField(
                    modifier = Modifier
                        .semantics { testTag = "monthInput" },
                    value = month,
                    onValueChange = { newValue ->
                        month = newValue
                        monthError = if (newValue.isNotEmpty() && newValue.toIntOrNull()?.let { it in 1..12 } != true) {
                            invalidMonthError
                        } else {
...

                Spacer(modifier = Modifier.height(16.dp))

                // Year input field
                OutlinedTextField(
                    modifier = Modifier
                        .semantics { testTag = "yearInput" },
                    value = year,
                    onValueChange = { newValue ->
                        year = newValue
                        yearError = if (newValue.isNotEmpty() && newValue.toIntOrNull() == null) {
                            invalidYearError
                        } else {
...
            title = {
                Text(text = daysPassedDialogTitle)
            },
            text = {
                Text(
                    "$daysSinceStartOfYear $daysPassedMessage",
                    modifier = Modifier.semantics { testTag = "daysPassedDialog" }
                )
            },
            confirmButton = {
                Button(onClick = { showDialog = false }) {
                    Text("OK")
                }
...
